--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-color: #f2eeee;
     margin: 0;
     padding: 20px;
   }
   
   h1 {
-    color: #333;
+    color: #060606;
   }
   
   p {
